--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
       </div>
     </div>
-<a href="https://github.com/maggie-hyland/maggies-project">Open-source code</a>, by Maggie Hyland
+<a href="https://github.com/maggie-hyland/maggies-project" id="github-link">Open-source code</a>, by Maggie Hyland
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
